[project]
name="homeassistant-amcrest-custom"
version="0.1.0"
description="Custom Amcrest integration for Home Assistant to replace the default."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "codespell>=2.3.0",
    "homeassistant>=2024.12.5",
    "pre-commit>=4.0.1",
    "pytest-homeassistant-custom-component>=0.13.195",
    "ruff>=0.9.2",
]

[tool.codespell]
ignore-words-list="hass"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
local_partial_types = true
strict_equality = true
no_implicit_optional = false
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
