[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = []

[project]
dependencies = [
  "amcrest_api>=0.1.8",
]
description = "Custom Amcrest integration for Home Assistant to replace the default."
name = "homeassistant-amcrest-custom"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.2.14"

[dependency-groups]
dev = [
  "codespell>=2.3.0",
  "colorlog>=6.9.0",
  "mypy>=1.14.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-homeassistant-custom-component>=0.13.205",
  "ruff>=0.9.2",
]
# Not required for this project, but assist development by
# installing HomeAssistant default_config requirements.
fix-hass-error = [
  "habluetooth==3.7.0",
  "bleak_esphome==2.0.0",
  "aiodiscover==2.1.0",
]

[tool.codespell]
ignore-words-list = "hass"
skip = "uv.lock"

[tool.mypy]
check_untyped_defs = true
disable_error_code = "union-attr"
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
local_partial_types = true
no_implicit_optional = false
python_version = "3.13"
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "UP",
  "B",
  "SIM",
  "I",
  "TC",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
addopts = "--cov=custom_components.amcrest --cov-report=xml --junitxml test_results.xml"
asyncio_mode = "auto"
testpaths = "tests"

[tool.coverage.run]
omit = ["amcrest_api/__main__.py"]
